--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,19 @@
 }
 
 :root{
-  --colour-blue: #567C8D;
+  --colour-blue: #394c62;
+  --color-header: white;
 }
 
 body{
   width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
+
+}
+
+button{
+  cursor: pointer;
 }
 
 #header-container{
@@ -22,7 +29,10 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 64px;
+  padding: 16px 100px;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 
@@ -36,8 +46,9 @@ body{
 
 #header-container .section-right{
   display: flex;
-  width: 300px;
+  width: 400px;
   justify-content: space-between;
+  
 }
 
 #header-container #logo .section-left{
@@ -50,3 +61,634 @@ body{
   display: flex;
   align-items: center;
 }
+
+
+#home-container{
+  box-sizing: border-box;
+  padding: 16px 100px;
+  margin-top: 16px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#home-container h2{
+  font-size: 32px;
+  font-weight: 600;
+}
+
+
+#home-container h1{
+  font-size: 48px;
+  font-weight: bold;
+  margin-bottom: 18px;
+}
+
+
+#home-container h3{
+  font-size: 24px;
+  font-weight: 500;
+  color:var(--colour-blue);
+  margin-bottom: 70px;
+}
+
+
+#home-container button{
+  padding: 12px 48px;
+  border: none;
+  border-radius: 12px;
+  font-size: 16px;
+  background-color: var(--colour-blue);
+  color: white;
+  cursor: pointer;
+}
+
+
+#home-container #home-avatar-img{
+  width:400px;
+  margin-bottom: 50px;
+}
+
+
+
+#about-container{
+  background-color: var(--colour-blue);
+  padding: 100px 100px ;
+  width: 100%;
+
+  color: white;
+
+  box-sizing: border-box;
+  
+}
+
+
+.header{
+  margin-bottom: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header h1{
+  font-size: 32px;
+  font-weight: 600;
+  color: var(--color-header);
+}
+
+
+
+#about-container .section-left{
+  display: flex;
+  align-items: center;
+}
+
+#about-container img{
+  width: 300px;
+  border-radius: 12px;
+
+}
+
+#about-container .about-info{
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+
+#about-container .about-info .section-right{
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  justify-content: center;
+  
+
+}
+
+#about-container .section-top{
+  width: 600px;
+}
+
+#about-container p{
+  font-size: 14px;
+}
+
+
+#about-container .cards-container{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: end;
+}
+
+
+#about-container .about-info .card{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  width: 300px;
+
+  background-color: #202D3B;
+
+  padding: 18px 18px;
+  border-radius: 12px;
+}
+
+#about-container .about-info .card h2{
+  font-size: 18px;
+}
+
+#about-container .about-info .card h3{
+  font-size: 12px;
+  font-weight: 500;
+}
+
+
+.indent{
+  margin-left: 20px;
+  margin-top: 5px;
+}
+
+
+#tech-skills-container{
+  background-color: var(--colour-blue);
+  padding: 100px 100px;
+  width: 100%;
+
+  color: white;
+
+  box-sizing: border-box;
+  
+}
+
+
+#tech-skills-container .light-weight{
+  font-weight: 300;
+  color: white;
+
+  margin-left: 5px;
+}
+
+
+#tech-skills-container #tech-cards-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 300px);
+  gap: 10px;
+  justify-content: center;
+}
+
+#tech-cards-container .card{
+  
+  height: 250px;
+  background-color: #202D3B;
+  padding: 18px 18px;
+  border-radius: 12px;
+  
+}
+
+#tech-cards-container .no-point {
+  list-style-type: none;
+}
+
+#tech-cards-container img{
+  width: 15px;
+  margin-right: 15px;
+}
+
+#tech-cards-container .card h2{
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+
+#tech-cards-container .card h3{
+  font-size: 14px;
+  font-weight: 400;
+}
+
+#tech-cards-container .card h4{
+  font-size: 12px;
+  font-weight: 300;
+  color: rgb(230, 230, 230);
+}
+
+#tech-cards-container li{
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+}
+
+
+#tech-cards-container .two-list{
+  display: flex;
+  gap: 50px;
+}
+
+#projects-container{
+  background-color: var(--colour-blue);
+  padding: 100px 100px;
+  width: 100%;
+
+  
+
+  color: white;
+
+  box-sizing: border-box;
+}
+
+
+
+
+
+
+#projects-card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 300px);
+  gap: 50px;
+  justify-content: center;
+}
+
+
+#projects-card-container .card{
+  background: white;
+  color: black;
+  height: 350px;
+  border-radius: 12px;
+  box-sizing: border-box;
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
+}
+
+
+
+#projects-card-container img{
+  width: 265px;
+  height: 150px;
+  border-radius: 12px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(225, 225, 225);
+}
+
+
+
+#projects-card-container h2{
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 12px;
+  margin-bottom: 2px;
+  
+}
+
+#projects-card-container h3{
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(60, 60, 60);
+
+}
+
+#projects-card-container button{
+  border-style: none;
+  padding: 8px 24px;
+  border-radius: 12px;
+  background-color: #202D3B;
+  color: white;
+}
+
+
+
+#projects-card-container .button-container{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 12px;
+}
+
+
+#contact-container{
+  background-color: var(--colour-blue);
+  padding: 100px 100px;
+  width: 100%;
+
+  color: white;
+  box-sizing: border-box;
+  
+}
+
+
+#contact-container .info-container{
+  display: flex;
+  align-items:start;
+  gap: 100px;
+  align-items: start;
+  justify-content: center;
+
+}
+
+#contact-container .box{
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+#contact-container img{
+  width: 20px;
+}
+
+#contact-container h2{
+  font-size: 16px;
+  font-weight: 400;
+  
+}
+
+#contact-container .section-left{
+  background-color: #202D3B;
+  padding: 18px 18px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+
+
+
+#contact-container form{
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  gap: 12px;
+}
+
+#contact-container input{
+  padding: 12px 12px;
+  border-radius: 12px;
+  border-style: none;
+  font-size: 14px;
+}
+
+#contact-container textarea{
+  padding: 12px 12px;
+  border-radius: 12px;
+  border-style: none;
+}
+
+#contact-container button{
+  padding: 12px 12px;
+  border-style: none;
+  border-radius: 12px;
+  cursor: pointer;
+  background-color: #202D3B;
+  color: white;
+}
+
+
+
+
+#footer-container{
+  background-color: white;
+  padding: 40px 100px;
+  width: 100%;
+
+  
+
+  color: #202D3B;
+
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+#footer-container img{
+  width: 30px;
+}
+
+#footer-container button{
+  border-style: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+#footer-container .contact-links-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-top: 50px;
+  
+}
+
+#footer-container .page-links-container{
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  gap: 25px;
+  margin-top: 15px;
+}
+
+#footer-container p{
+  font-size: 12px;
+  margin-top: 20px;
+  font-weight: 500;
+  text-align: center;
+}
+
+
+@media (max-width: 1200px){
+
+  #home-container{
+    box-sizing: border-box;
+    padding: 16px 100px;
+    margin-top: 16px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+
+  #home-container .section-left{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  #home-container .section-right img{
+    display: none;
+  }
+
+
+  #about-container .about-info{
+    display: flex;
+    gap: 50px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+
+  #about-container p{
+    text-align: center;
+  }
+
+  
+
+  #about-container .section-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #contact-container .info-container{
+    display: flex;
+    flex-direction: column;
+    align-items:start;
+    gap: 70px;
+    align-items: center;
+    justify-content: center;
+  
+  }
+  
+
+
+  
+
+
+}
+
+
+@media (max-width: 900px){
+
+  #header-container .section-logo{
+    display: none;
+  }
+
+  #header-container{
+    justify-content: center;
+  }
+
+
+  #header-container .section-right{
+    display: flex;
+    width: 100%;
+    gap: 50px;
+    justify-content: center;
+    
+  }
+
+  #about-container p{
+    text-align: center;
+    
+  }
+
+  #about-container .section-top{
+    width: 500px;
+  }
+
+  
+
+  #about-container .section-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  #about-container .cards-container{
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  #contact-container form{
+    width: 500px;
+  }
+
+
+  #header-container{
+    padding: 16px 30px;
+   
+  }
+
+  #home-container{
+    padding: 16px 30px;
+  }
+
+  #about-container, #tech-skills-container, #projects-container, #contact-container{
+    padding: 50px 30px;
+  }
+
+  #footer-container{
+    padding: 30px 30px;
+  }
+}
+
+
+
+@media (max-width: 600px){
+  #header-container{
+    padding: 16px 20px;
+   
+  }
+
+  #header-container .section-right{
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    justify-content: center;
+    
+  }
+
+  #home-container .section-left{
+    align-items: center;
+  }
+
+  #home-container h3{
+    text-align: center;
+  }
+
+  #home-container{
+    padding: 16px 20px;
+  }
+  
+
+
+  #about-container, #tech-skills-container, #projects-container, #contact-container{
+    padding: 50px 20px;
+  }
+
+
+  #about-container .section-top{
+    width: 250px;
+  }
+
+
+  #about-container .cards-container .card{
+    width: 250px;
+    
+  }
+
+  #footer-container{
+    padding: 20px 20px;
+  }
+
+  #contact-container form{
+    width: 250px;
+  }
+
+  #footer-container .page-links-container{
+    gap: 10px;
+  }
+}
+
+
