--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 
 }
 
@@ -36,11 +37,19 @@ button{
 }
 
 
-#header-container button{
+#header-container  a{
   border: none;
-  background-color: white;
+  color: black;
   cursor: pointer;
   font-size: 14px;
+  text-decoration: none;
+  transition: .3s;
+}
+
+#header-container nav a:hover,
+#header-container nav a.active{
+  color: #394c62;
+
 }
 
 
@@ -479,12 +488,21 @@ button{
   font-weight: 400;
 }
 
+#footer-container nav a{
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #202D3B;
+}
+
 #footer-container .contact-links-container{
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 12px;
   margin-top: 50px;
+  
   
 }
 
